# AI-Assistant-Pro-with-CLI

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/llm/: anthropic_provider.py  base.py  openai_provider.py
src/utils/: conversation.py  cost_tracker.py  logger.py
tests/: conftest.py  test_config.py  test_conversation.py  test_cost_tracker.py  test_llm_providers.py  test_logger.py  test_main.py
